--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 	],
 	"require": {
 		"php": "7.4 - 8.2",
-		"nette/utils": "^2.4 || ^3.0 || ^4.0"
+		"nette/utils": "^2.4 || ^3.0 || ^4.0",
+		"phig/phig": "^1.2"
 	},
 	"autoload": {
 		"classmap": ["src/"]
